# vulkan-playground

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/: compile.sh  shader.frag  shader.vert
src/: main.rs
src/utility/: constants.rs  debug.rs  fps_limiter.rs  mod.rs  platforms.rs  program_proc.rs  structures.rs  traits.rs
src/utility/share/: mod.rs  pipeline.rs
