[package]
name = "rust_game"
version = "0.1.0"
authors = ["Andrzej Swatowski <andrzejswatowski@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23.0"
# image = "0.10.4"
ash = "0.31.0"
# ash-window
