[package]
name = "rust_game"
version = "0.1.0"
authors = ["Andrzej Swatowski <andrzejswatowski@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23.0"
ash = "0.31.0"
num = "0.3.0"
memoffset = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
